--- a/hello/project.properties
+++ b/hello/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-20
-android.library.reference.1=../appcompat_v7
+android.library.reference.1=../../OpenCV-2.4.9-android-sdk/sdk/java
